tests/snapshots/parser__fn_parse_errors__break_inside_fn_inside_for.snap
---
source: tests/parser.rs
expression: "parse(\"for x in [1] { fn f() { break } }\")"
---
Err(
    ParseError {
        message: "`break` used outside a loop",
        span: Span {
            start: 24,
            end: 29,
        },
    },
)
