tests/snapshots/parser__fn_parse_errors__duplicate_parameter.snap
---
source: tests/parser.rs
expression: "parse(\"fn f(x, x) { x }\")"
---
Err(
    ParseError {
        message: "duplicate parameter `x`",
        span: Span {
            start: 8,
            end: 9,
        },
    },
)
