tests/snapshots/parser__fn_parse_errors__missing_body_brace.snap
---
source: tests/parser.rs
expression: "parse(\"fn f(x) x\")"
---
Err(
    ParseError {
        message: "expected `{`, got Identifier(\"x\")",
        span: Span {
            start: 8,
            end: 9,
        },
    },
)
