tests/snapshots/parser__fn_parse_errors__missing_closing_paren.snap
---
source: tests/parser.rs
expression: "parse(\"fn f(x { x }\")"
---
Err(
    ParseError {
        message: "expected `,` or `)`, found OCurly",
        span: Span {
            start: 7,
            end: 8,
        },
    },
)
