tests/snapshots/parser__fn_parse_errors__newline_between_param_and_comma.snap
---
source: tests/parser.rs
expression: "parse(\"fn f(a\\n, b) { }\")"
---
Err(
    ParseError {
        message: "expected `,` or `)`, found Newline",
        span: Span {
            start: 6,
            end: 7,
        },
    },
)
