tests/snapshots/parser__fn_parse_errors__non_identifier_parameter.snap
---
source: tests/parser.rs
expression: "parse(\"fn f(1) { }\")"
---
Err(
    ParseError {
        message: "expected parameter, found Int(1)",
        span: Span {
            start: 5,
            end: 6,
        },
    },
)
