tests/snapshots/parser__fn_parse_errors__return_outside_function.snap
---
source: tests/parser.rs
expression: "parse(\"return 1\")"
---
Err(
    ParseError {
        message: "`return` used outside a function",
        span: Span {
            start: 0,
            end: 6,
        },
    },
)
